@@ -1,3 +1,10 @@
+2003-01-25  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03684] Re: fold patch
+	* file.c (PSIZE): added
+		(HTMLlineproc2body): outc,outp is created by NewAtom_N
+			use PSIZE
+
 2003-01-25  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* file.c (getNextPage): no need volatile for code
@@ -6846,4 +6853,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.715 2003/01/24 17:54:07 ukai Exp $
+$Id: ChangeLog,v 1.716 2003/01/24 17:57:07 ukai Exp $
